            and explain the derivation of the gradient in the vignette.
      \item Add \code{chol} and \code{invchol} classes, mainly to avoid
            confusion.
      \item Make sure \code{logdet(standardize())} is finite, always. 
    }
  }
  \subsection{Bugfixes}{
    \itemize{
      \item Names didn't propagate properly in several places.
    }
  }
}

\section{Changes in Version 1.2-6 (2024-08-17)}{
  \subsection{Features}{
    \itemize{
      \item Add \code{logdet()} function for computing log-determinants from
            lower triangular matrices.
      \item Speed up \code{solve(<ltMatrices>, ...)}.
    }
  }
  \subsection{Bugfixes}{
    \itemize{
      \item Avoid unnecessary copying of large data objects.
      \item -1/2 -> -1 for det(C) in lmvnorm_src vignette; spotted by Kurt Hornik
      \item Use \code{M\_PI}.
    }
  }
}

\section{Changes in Version 1.2-5 (2024-05-18)}{
  \subsection{Features}{
    \itemize{
      \item Update the \code{Using mvtnorm} package vignette and references therein.
      \item Speed up \code{Mult(<ltMatrices>, transpose = TRUE)}.
      \item Speed up \code{ldmvnorm()}.
      \item Add constructor \code{syMatrices()} for multiple symmetric
            matrices and \code{as.syMatrices()} for coercion from \code{ltMatrices}.}
  }
  \subsection{Bugfixes}{
    \itemize{
      \item Fix segmentation fault or unnecessary error or warning + approximation for
      \code{algorithm = Miwa()} or \code{TVPACK()}, in case dimension
      reduction to one-dimensional is possible, e.g., for \preformatted{
  pmvnorm(lower = rep(-Inf,3), upper = c(-1, Inf, Inf),
          sigma = diag(3), algorithm = Miwa())
     # or
  pmvnorm(lower = c(-Inf,-Inf),
          upper = c(- 1,  Inf), sigma=diag(2), algorithm = TVPACK())
        }
    }
  }
}


\section{Changes in Version 1.2-4 (2023-11-27)}{
  \subsection{Bugfixes}{
    \itemize{
      \item Remove empty print statement from \code{miwa.c}
    }
  }
}
