@@ -605,6 +605,11 @@ rows/columns $j \in \{1, \dots, \J\}$ of the corresponding matrices $\mC_i$.
 
     if (!missing(j)) {
 
+        if (is.character(j)) {
+            stopifnot(all(j %in% dn[[2L]]))
+            j <- match(j, dn[[2L]])
+        }
+
         j <- (1:J)[j] ### get rid of negative indices
 
         if (length(j) == 1L && !diag) {
@@ -644,6 +649,10 @@ rows/columns $j \in \{1, \dots, \J\}$ of the corresponding matrices $\mC_i$.
 ### if j is not ordered, result is not a lower triangular matrix
 "[.ltMatrices" <- function(x, i, j, ..., drop = FALSE) {
     if (!missing(j)) {
+        if (is.character(j)) {
+            stopifnot(all(j %in% dimnames(x)[[2L]]))
+            j <- match(j, dimnames(x)[[2L]])
+        }
         if (all(j > 0)) {
             if (any(diff(j) < 0)) stop("invalid subset argument j")
         }
